--- a/package.json
+++ b/package.json
@@ -1,19 +1,25 @@
 {
-  "name": "apiautomation",
-  "version": "1.0.0",
-  "description": "API Automation framework with Chai and Mocha",
-  "scripts": {
-    "test": "mocha"
-  },
-  "repository": {
-    "type": "git",
-    "url": ""
-  },
-  "keywords": [
-    "Chai",
-    "Mocha",
-    "API Automation"
-  ],
-  "author": "Bharat Kumawat",
-  "license": "ISC"
+	"name": "apiautomation",
+	"version": "1.0.0",
+	"description": "API Automation framework with Chai and Mocha",
+	"scripts": {
+		"test": "HOST=https://reqres.in mocha --timeout 5000"
+	},
+	"repository": {
+		"type": "git",
+		"url": ""
+	},
+	"keywords": [
+		"Chai",
+		"Mocha",
+		"API Automation"
+	],
+	"author": "Bharat Kumawat",
+	"license": "ISC",
+	"devDependencies": {
+		"chai": "^4.2.0",
+		"chai-http": "^4.3.0",
+		"mocha": "^7.1.1",
+		"yarn": "^1.22.4"
+	}
 }
